<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="horizontal|vertical"
    tools:context="com.michal.konferencje.loginactivity.LoginActivityView">


    <EditText
        android:id="@+id/Email_AL_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/Margin8"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="@dimen/Margin8"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="@color/cardview_light_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/primary_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/Password_AL_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/Margin8"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="@dimen/Margin8"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="@color/cardview_light_background"

        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:textColorHint="@color/primary_light"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_AL_EditText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/LogIn_AL_Button"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:layout_marginEnd="@dimen/Margin8"
        android:layout_marginRight="24dp"
        android:layout_marginStart="@dimen/Margin8"
        android:layout_marginTop="7dp"
        android:background="@color/colorAccent"
        android:text="@string/zaloguj"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_AL_EditText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/Registration_AL_Button"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:layout_marginEnd="@dimen/Margin8"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="@dimen/Margin8"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/rejestracja"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_AL_EditText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/conference"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/ForgotPassword_AL_Button"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:text="@string/nie_pami_tasz_has_a"
        android:textColor="@color/primary_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn_AL_Button"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>

